@@ -1,0 +1,18 @@
+/* $Id$ */
+
+/* Control operations. */
+enum {
+	COMMAND_SET_COMPRESS_METHOD = 1,
+	COMMAND_SET_COMPRESS_LEVEL,
+	COMMAND_PREPARE_COMPRESS,
+	COMMAND_PREPARE_UNCOMPRESS,
+	COMMAND_COMPRESS,
+	COMMAND_UNCOMPRESS,
+	COMMAND_SVN_REVISION
+};
+
+/* Return codes. */
+enum {
+	RET_OK = 0,
+	RET_ERROR
+};
